# reposted

./: .editorconfig  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
bluetooth-python/: requirements.txt
bluetooth-python/src/: bluetooth.py  delegate.py  logger.py  main.py  stream_deck.py
com.sobolevn.bluetooth.sdPlugin/: manifest.json
