[tool.poetry]
name = "bluetooth-streamdeck-plugin"
# Must match `manifest.json`
version = "1.1.1"
description = "This is not on PyPI"
authors = ["sobolevn <mail@sobolevn.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.x"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.17"
mypy = "^1.3"
nitpick = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
